# Palantir

./: .gitignore  HANDOFF.md  pyproject.toml
.claude/: launch.json  settings.local.json
config/: .env.example  default.toml  development.toml  production.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts  websocket.ts
frontend/src/components/: AuthGate.tsx  Layout.tsx  ReloadOverlay.tsx  WakeIndicator.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/styles/: globals.css
scripts/: dev-up.sh  install-pi-relay.sh  install.sh  run-fake-redis.py  start-laptop.ps1
src/palantir/: __init__.py  backup.py  config.py  db.py  logging.py  models.py  names.py  preflight.py  redis_client.py  reload.py  resilience.py  settings_store.py
src/palantir/audio/: capture.py  service.py  speaker_id.py  vad.py  wake_word.py
src/palantir/brain/: actuator.py  automation.py  context_builder.py  (+5 more)
src/palintir/: __init__.py  backup.py  config.py  db.py  logging.py  preflight.py  redis_client.py  resilience.py
systemd/: palantir-audio.service  palantir-backup.service  palantir-backup.timer  palantir-brain.service  palantir-eventlog.service  palantir-pi-relay.service  palantir-tts.service  palantir-vision.service  palantir-web.service  palintir-audio.service  palintir-backup.service  palintir-backup.timer  palintir-brain.service  palintir-eventlog.service  palintir-tts.service  palintir-vision.service  palintir-web.service
tests/: conftest.py  test_preflight.py
tests/test_audio/: test_capture.py  test_reload.py  test_vad.py
tests/test_brain/: test_actuator.py  test_automation.py  test_service.py
tests/test_eventlog/: __init__.py  test_attendance.py
tests/test_vision/: test_person_tracker.py
tests/test_web/: test_auth.py  test_chat.py  test_enrollment.py  test_health.py  test_rate_limit.py  test_relay_limits.py  test_settings.py  test_validation.py  test_websocket_manager.py
(+97 files in other folders)
